--- a/imports/ui/Home.css
+++ b/imports/ui/Home.css
@@ -12,8 +12,16 @@
   transform: translate(30%, 0%);
 }
 
+.first-row{
+  margin-top:3rem;
+}
+
 .otherMainTitle {
   font-family: 'Source Sans Pro', sans-serif;
+}
+
+.title1{
+  margin-top: 2rem;
 }
 
 .title2 {
