--- a/imports/ui/Home.css
+++ b/imports/ui/Home.css
@@ -8,12 +8,12 @@
 }
 
 .mainTitle {
-  font-family: 'Libre Baskerville', serif;
+  font-family: "Libre Baskerville", serif;
   transform: translate(30%, 0%);
 }
 
 .otherMainTitle {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 .title2 {
@@ -21,7 +21,7 @@
   top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-family: 'Libre Baskerville', serif;
+  font-family: "Libre Baskerville", serif;
 }
 
 .title {
@@ -29,15 +29,15 @@
   top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-family: 'Libre Baskerville', serif;
+  font-family: "Libre Baskerville", serif;
 }
 
 .title1 {
   position: absolute;
   top: 42%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  font-family: 'Libre Baskerville', serif;
+  transform: translate(-50%, 0%);
+  font-family: "Libre Baskerville", serif;
 }
 
 .subtitle {
@@ -45,7 +45,7 @@
   top: 60%;
   left: 35%;
   transform: translate(-50%, -50%);
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 .othertitle {
@@ -53,11 +53,11 @@
   top: 70%;
   left: 60%;
   transform: translate(-50%, -50%);
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 .some {
-  color: #00A878;
+  color: #00a878;
   font-weight: bold;
 }
 
@@ -73,10 +73,10 @@
 
 .minortext {
   text-align: center;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 20px;
 }
 
 .other {
-  background-color: #DAEFB3;
+  background-color: #daefb3;
 }
